# catkin_ros

./: .envrc  .gitignore  .gitmodules  README.md  README.org  overlay.nix  requirements.txt  shell.nix
docs/: apriltag_transform.md  apriltag_transform.org
ggrasp_data/: 05bcfb9e-0dfe-11eb-bc00-04d4c47a5efb.grasp  7f56ffdc-0df8-11eb-bc00-04d4c47a5efb.grasp  c997f2fe-0dfd-11eb-bc00-04d4c47a5efb.grasp
src/algorithms/ggcnn/: README.org
src/algorithms/ggcnn/ros_nodes/: ggcnn_predict_rt.py  ggcnn_service.py
src/algorithms/ggcnn/src/ggcnn/: ggcnn.py  ggcnn_torch.py  models.py  post_process.py  train.py
src/algorithms/ggrasp/: CMakeLists.txt  README.md  README.org  package.xml  setup.py
src/algorithms/ggrasp/cfg/: ggrasp.yml  ggrasp_robotiq.yml  ggrasp_service.yml
src/algorithms/ggrasp/launch/: ggrasp_rt.launch  ggrasp_service.launch
src/algorithms/ggrasp/ros_nodes/: ggrasp_predict_rt.py  ggrasp_rt.py  ggrasp_service.py
src/algorithms/ggrasp/saved_models/: epoch_67_iou_0.76  ggcnn  ggcnn_jacquard_smooth_0.5_iou_0.77  ggcnn_l1_smooth_0.5_iou_0.97  grconvnet
src/algorithms/ggrasp/src/: guild.yml
src/algorithms/ggrasp/src/ggrasp/: datasets.py  ggrasp.py  losses.py  models.py  train.py
src/algorithms/ggrasp/srv/: GraspPrediction.srv
src/robots/franka_control_wrappers/: README.org
src/robots/franka_control_wrappers/config/: franka_controllers.yaml
src/robots/franka_control_wrappers/ros_nodes/: set_panda_defaults.py
src/robots/franka_control_wrappers/src/franka_control_wrappers/: gripper.py  panda_commander.py  panda_gripper.py  robotiq_gripper.py
src/robots/franka_robotiq_description/: CMakeLists.txt  package.xml
src/robots/franka_robotiq_description/launch/: panda_robotiq.launch
src/robots/franka_robotiq_description/robots/: panda_arm_hand.urdf.xacro  panda_robotiq.urdf.xacro
src/robots/panda_moveit_config/config/: sensors_kinect_pointcloud.yaml
src/systems/mvp_grasping/: CMakeLists.txt  README.md  README.org  package.xml  setup.py
src/systems/mvp_grasping/cfg/: panda_setup.yaml  panda_setup_robotiq.yaml
src/systems/mvp_grasping/launch/: panda.rviz  panda_robotiq.rviz  robot_bringup.launch  tactile_pid.launch  wrist_realsense.launch
src/systems/mvp_grasping/ros_nodes/: diagnose.py  grasp_entropy_node.py  panda_closed_loop_grasp.py  panda_collect.py  panda_current_joint_state.py  panda_open_loop_grasp.py  panda_test.py  panda_test_grasp.py  pid_helper.py
src/systems/mvp_grasping/src/mvp_grasping/: grasp_stats.py  gridworld.py  renderer.py  (+2 more)
(+7 files in other folders)
