<?xml version="1.0"?>
<package format="2">
  <name>franka_robotiq_description</name>
  <version>0.1.0</version>
  <description>franka_robotiq_description contains URDF files and meshes of
  Franka Emika, with the robotiq arm</description>
  <maintainer email="jethrokuan95@gmail.com">Jethro Kuan</maintainer>
  <license>Apache 2.0</license>

  <author>Jethro Kuan</author>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>xacro</exec_depend>
</package>
